--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "client management system",
   "main": "index.js",
   "scripts": {
-    "start": "server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "tuchak",
