--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
     "sequelize": "5.21.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.5.1"
   }
 }
