--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
+    "generate-password": "^1.5.1",
     "jsonwebtoken": "8.5.1",
     "mysql2": "2.1.0",
+    "nodemailer": "^6.4.8",
     "nodemon": "2.0.2",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
