--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemon": "2.0.2",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
-    "sequelize": "5.21.3"
+    "sequelize": "5.21.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "sequelize-cli": "^5.5.1"
